# FirmReBugger

./: .gitignore  README.md  pyproject.toml  requirements.txt
FirmBench/01-targets/3Dprinter/: bug_descriptor.c
FirmBench/01-targets/6LoWPAN_Receiver/: bug_descriptor.c
FirmBench/01-targets/CNC/: bug_descriptor.c
FirmBench/01-targets/Console/: bug_descriptor.c
FirmBench/01-targets/GPSTracker/: bug_descriptor.c
FirmBench/01-targets/Gateway/: bug_descriptor.c
FirmBench/01-targets/PLC/: bug_descriptor.c
FirmBench/01-targets/RF_Door_lock/: bug_descriptor.c
FirmBench/01-targets/RIOT_CCN_LITE/: bug_descriptor.c
FirmBench/01-targets/RIOT_GNRC/: bug_descriptor.c
FirmBench/01-targets/Soldering_Iron/: bug_descriptor.c
FirmBench/01-targets/Zepyhr_SocketCan/: bug_descriptor.c
FirmBench/01-targets/hoverboard/: bug_descriptor.c
FirmBench/01-targets/oresat-control/: bug_descriptor.c
FirmBench/01-targets/utasker_MODBUS/: bug_descriptor.c
FirmBench/01-targets/utasker_USB/: bug_descriptor.c
FirmBench/02-targets/contiki-hello-4-4/: bug_descriptor.c
FirmBench/02-targets/contiki-hello-4-8/: bug_descriptor.c
FirmBench/02-targets/contiki-router/: bug_descriptor.c
FirmBench/02-targets/contiki-snmp/: bug_descriptor.c
FirmBench/02-targets/loramac/: bug_descriptor.c
FirmBench/02-targets/riot_gnrc_networking/: bug_descriptor.c
FirmBench/02-targets/zephyr-3330/: bug_descriptor.c
FirmBench/02-targets/zephyr-bt/: bug_descriptor.c
FirmBench/02-targets/zephyr-f429zi/: bug_descriptor.c
src/firmrebugger/: __init__.py  cli.py  common.py  main.py
(+357 files in other folders)
